--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "leveldb_test",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "dev:watch": "ts-node-dev --respawn src/index.ts",
-    "clean": "rimraf dist/*",
+    "jest": "jest",
+    "ts-node": "ts-node",
     "tsc": "tsc",
-    "build": "npm-run-all clean tsc",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "?start": "echo 'トランスパイル済の Express サーバを起動する・事前に npm run build を実行し ./dist/ ディレクトリにコードを生成しておくこと'",
+    "start": "node ./dist/index.js",
+    "?start-ts": "echo 'ts-node で ./src/ 配下のコードを直接実行する'",
+    "start-ts": "ts-node ./src/index.ts",
+    "?dev": "echo 'ライブリロード開発を開始する・ts-node-dev で ./src/ 配下のコードを直接実行する'",
+    "dev": "ts-node-dev ./src/index.ts",
+    "?lint": "echo 'ESLint を実行する (型チェックはできないので npm run build を利用する)'",
+    "lint": "eslint --ext '.js,.ts' ./src/**",
+    "?lint-fix": "echo 'ESLint を実行し、自動修正できる箇所は修正する'",
+    "lint-fix": "eslint --fix --ext '.js,.ts' ./src/**",
+    "?test": "echo 'ユニットテストを実行する・結果は ./coverage/ ディレクトリに出力される'",
+    "test": "jest --coverage",
+    "?test-watch": "echo 'ユニットテストを監視実行する'",
+    "test-watch": "jest --coverage --watch",
+    "?build": "echo 'TypeScript をトランスパイルする・設定は ./tsconfig.json を参照'",
+    "build": "tsc"
   },
   "author": "",
   "license": "MIT",
@@ -20,8 +33,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.7.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
