--- a/package.json
+++ b/package.json
@@ -35,9 +35,17 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^2.7.1",
+    "prettier": "^2.6.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
