--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
-          eslint_flags: '--ext ".js,.ts" ./src/**'
+          eslint_flags: './src/**/*.{ts,js}'
       - name: Run eslint
         run: npm run lint
       - name: Run Jest
